# ux_feedback_crew

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: evaluation_results.py  wireframe_generation.py
data/outputs/: feedback_20260125_154953.json  feedback_20260125_154953.md  feedback_20260128_113028.json  feedback_20260128_113028.md  heuristic_evaluation_20260125_154919.json  heuristic_evaluation_20260128_112942.json  vision_analysis_20260125_154844.json  vision_analysis_20260128_112856.json  wireframe_20260122_205904.html  wireframe_20260128_113207.html
src/ux_feedback_crew/: crew.py  main.py
src/ux_feedback_crew/config/: agents.yaml  nielsen_heuristics.json  tasks.yaml
src/ux_feedback_crew/tools/: __init__.py  feedback_tool.py  heuristic_tool.py  vision_tool.py  wireframe_tool.py
